add video-container classes and grid template style

--- a/index.html
+++ b/index.html
@@ -13,19 +13,32 @@
 <body>
     <div class="navbar">
         <div class="n-1">
-            <a href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
+            <a href="#home">A</a>
+            <a href="#news">B</a>
+            <a href="#contact">C</a>
         </div>
         <div class="n-2">
-            <a href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
+            <a href="#home">A</a>
+            <a href="#news">B</a>
+            <a href="#contact">C</a>
         </div>
         <div class="n-3">
-            <a href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
+            <a href="#home">A</a>
+            <a href="#news">B</a>
+            <a href="#contact">C</a>
+        </div>
+    </div>
+    <div class="main-container">
+        <div class="video-container">
+            <div class="video-content"></div>
+            <div class="video-stats"></div>
+            <div class="video-info"></div>
+        </div>
+        <div class="recomendation-container">
+            <div class="recomendation-content"></div>
+            <div class="recomendation-content"></div>
+            <div class="recomendation-content"></div>
+            <div class="recomendation-content"></div>
         </div>
     </div>
     <script src="" async defer></script>
