add more video classes for info and video stats, fixed grid template area

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         </div>
     </div>
     <div class="main-container">
-        <div class="video-container">
-            <div class="video-content"></div>
-            <div class="video-stats"></div>
-            <div class="video-info"></div>
-        </div>
+        <div class="video-container"></div>       
+        <div class="video-stats"></div>
+        <div class="video-info"></div>
+        
         <div class="recomendation-container">
             <div class="recomendation-content"></div>
             <div class="recomendation-content"></div>
