add video to video container, add text and thumbnails to recomendations

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="navbar">
         <div class="n-1">
-            <a href="#home">A</a>
-            <a href="#news">B</a>
-            <a href="#contact">C</a>
+            <a href="#home"> <img src="TempImgs/icon-1.png" alt=""></a>
+            <a href="#news"> <img src="TempImgs/icon-2.png" alt=""></a>
+
         </div>
         <div class="n-2">
             <a href="#home">A</a>
@@ -23,22 +23,48 @@
             <a href="#contact">C</a>
         </div>
         <div class="n-3">
-            <a href="#home">A</a>
-            <a href="#news">B</a>
-            <a href="#contact">C</a>
+            <a href="#home"> <img src="TempImgs/icon-3.png" alt=""></a>
+            <a href="#news"> <img src="TempImgs/icon-4.png" alt=""></a>
+            <a href="#home"> <img src="TempImgs/icon-5.png" alt=""></a>
+            <a href="#news"> <img src="TempImgs/icon-6.png" alt=""></a>
         </div>
     </div>
     <div class="main-container">
-        <div class="video-container"></div>       
+        <div class="video-container">
+            <iframe
+            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            </iframe> 
+        </div>
         <div class="video-stats"></div>
         <div class="video-info"></div>
-        
+
         <div class="recomendation-container">
-            <div class="recomendation-content"></div>
-            <div class="recomendation-content"></div>
-            <div class="recomendation-content"></div>
-            <div class="recomendation-content"></div>
+            <div class="recomendation-content">
+                <img class="thumbnail" src="TempImgs/video-thumbnail.png" alt="">
+                <div class="info">
+                    <h3>Video title</h3>
+                    <p>Channel name</p>
+                    <p>Views * Upload date</p>
+                </div>
+            </div>
+            <div class="recomendation-content">
+                <img class="thumbnail" src="TempImgs/video-thumbnail.png" alt="">
+                <div class="info">
+                    <h3>Video title</h3>
+                    <p>Channel name</p>
+                    <p>Views * Upload date</p>
+                </div>
+            </div>
+            <div class="recomendation-content">
+                <img class="thumbnail" src="TempImgs/video-thumbnail.png" alt="">
+                <div class="info">
+                    <h3>Video title</h3>
+                    <p>Channel name</p>
+                    <p>Views * Upload date</p>
+                </div>
+            </div>
         </div>
+    </div>
     </div>
     <script src="" async defer></script>
 </body>
