add video info divs

--- a/index.html
+++ b/index.html
@@ -31,12 +31,34 @@
     </div>
     <div class="main-container">
         <div class="video-container">
-            <iframe
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe> 
+            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            </iframe>
         </div>
-        <div class="video-stats"></div>
-        <div class="video-info"></div>
+        <div class="video-stats">
+            <div class="general">
+                <h3>Bohemian Rhapsody | Muppet Music Video | The Muppets</h3>
+                <p>118,185,639 vistas
+                    •23 nov. 2009</p>
+            </div>
+            <div class="social">
+                <p>Likes</p>
+                <p>Dislikes</p>
+                <p>Share</p>
+            </div>
+        </div>
+        <div class="video-info">
+            <div class="top">
+                <div class="top-2">
+                    <img src="TempImgs/channel-thumbnail.png">
+                    <div class="data">
+                        <h3> The Muppets </h3>
+                        <p> 973,000 subs</p>
+                    </div>
+
+                </div>
+                <button class="subscribe-b">SUBSCRIBE</button>
+            </div>
+        </div>
 
         <div class="recomendation-container">
             <div class="recomendation-content">
