--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
         <div class="n-1">
             <a href="#home"> <img src="TempImgs/icon-1.png" alt=""></a>
             <a href="#news"> <img src="TempImgs/icon-2.png" alt=""></a>
-
         </div>
         <div class="n-2">
-            <a href="#home">A</a>
-            <a href="#news">B</a>
-            <a href="#contact">C</a>
+            <input>
+            <button type="submit">Search</button>
         </div>
         <div class="n-3">
             <a href="#home"> <img src="TempImgs/icon-3.png" alt=""></a>
